Fixed font issue on Safari.

--- a/src/_reset.scss
+++ b/src/_reset.scss
@@ -51,3 +51,8 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+
+// Fixes fonts on Safari
+body {
+  -webkit-font-smoothing: antialiased;
+}
